# lightweight_pose_estimation

./: .gitignore  demo.py  preinstall_requirements.txt  pyproject.toml
src/lightweight_pose_estimation/models/: with_mobilenet.py
src/lightweight_pose_estimation/modules/: pose.py
src/lightweight_pose_estimation/train/: val.py
tests/: test_lightweight_pose_estimation.py
